package com.example.calculator.math.model

enum class CalculatorMode {
    BASIC,
    ENGINEERING
}